Started the insights cards and created the main style file

--- a/css/container.css
+++ b/css/container.css
@@ -3,5 +3,5 @@
     width: 98%;
     margin: 0 auto;
     gap: 1.8rem;
-    grid-template-columns: 14rem auto;
+    grid-template-columns: 14rem auto 15rem;
 }
