--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -4,7 +4,7 @@
 }
 
 .sidebar__top {
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,7 +26,7 @@
 }
 
 .sidebar__menu {
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
     display: flex;
     flex-direction: column;
     height: 86vh;
